--- a/front-end-vue/package.json
+++ b/front-end-vue/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.21.1",
     "core-js": "^3.14.0",
     "google-palette": "^1.1.0",
+    "im-library": "https://github.com/endeavourhealth-discovery/IMLibrary/blob/main/im-library-1.0.1.tgz?raw=true",
     "node-sass": "^4.12.0",
     "path": "^0.12.7",
     "primeflex": "^2.0.0",
