--- a/front-end-vue/package.json
+++ b/front-end-vue/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve --port 8082",
-    "build": "vue-cli-service build",
+    "dev": "vite --port 8082",
+    "serve": "vite preview --port 8082",
+    "build": "vite build",
     "test:unit": "vue-cli-service test:unit",
     "test:unit:ci": "vue-cli-service test:unit > testResult.txt 2>&1",
-    "test:e2e": "cross-env VUE_APP_API=http://localhost:8080/ vue-cli-service test:e2e",
-    "lint": "vue-cli-service lint",
+    "test:e2e": "cross-env VITE_API=http://localhost:8080/ vue-cli-service test:e2e",
+    "lint": "eslint --ext .js,.vue,.ts --ignore-path .gitignore --fix src",
     "test:e2e:ci": "vue-cli-service test:e2e"
   },
   "dependencies": {
@@ -17,17 +18,15 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/vue-fontawesome": "^3.0.0-4",
+    "@vue/compiler-sfc": "^3.2.31",
     "aws-amplify": "^3.4.3",
     "axios": "^0.21.1",
-    "core-js": "^3.14.0",
     "google-palette": "^1.1.0",
-    "im-library": "https://github.com/endeavourhealth-discovery/IMLibrary/blob/main/im-library-1.0.1.tgz?raw=true",
     "node-sass": "^4.12.0",
     "path": "^0.12.7",
     "primeflex": "^2.0.0",
     "primeicons": "^4.1.0",
     "primevue": "^3.5.1",
-    "sass-loader": "^8.0.2",
     "tslib": "^2.3.1",
     "vue": "^3.1.1",
     "vue-json-pretty": "^2.0.4",
@@ -36,18 +35,12 @@
     "vuex": "^4.0.1"
   },
   "devDependencies": {
+    "@originjs/vite-plugin-commonjs": "^1.0.3",
     "@types/jest": "^24.0.19",
+    "@types/node": "^17.0.18",
     "@typescript-eslint/eslint-plugin": "^4.27.0",
     "@typescript-eslint/parser": "^4.27.0",
-    "@vue/cli-plugin-babel": "^4.5.13",
-    "@vue/cli-plugin-e2e-cypress": "^4.5.13",
-    "@vue/cli-plugin-eslint": "^4.5.13",
-    "@vue/cli-plugin-router": "^4.5.13",
-    "@vue/cli-plugin-typescript": "~4.5.0",
-    "@vue/cli-plugin-unit-jest": "^4.5.13",
-    "@vue/cli-plugin-vuex": "^4.5.13",
-    "@vue/cli-service": "^4.5.13",
-    "@vue/compiler-sfc": "^3.1.1",
+    "@vitejs/plugin-vue": "^1.6.1",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^7.0.0",
     "@vue/test-utils": "^2.0.0-rc.6",
@@ -55,12 +48,13 @@
     "babel-jest": "^26.6.3",
     "cross-env": "^7.0.3",
     "cypress": "^7.5.0",
-    "eslint": "^6.7.2",
+    "eslint": "^8.9.0",
     "eslint-plugin-cypress": "^2.11.3",
     "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-vue": "^7.11.1",
+    "eslint-plugin-vue": "^8.4.1",
     "prettier": "^1.19.1",
     "typescript": "^4.1.6",
+    "vite": "^2.5.4",
     "vue-jest": "^5.0.0-alpha.10"
   }
 }
