--- a/front-end-vue/package.json
+++ b/front-end-vue/package.json
@@ -6,7 +6,8 @@
     "dev": "vite --port 8082",
     "serve": "vite preview --port 8082",
     "build": "vite build",
-    "test:unit": "vue-cli-service test:unit",
+    "test:unit": "vitest",
+    "test:coverage": "vitest run --coverage",
     "test:unit:ci": "vue-cli-service test:unit > testResult.txt 2>&1",
     "test:e2e": "cross-env VITE_API=http://localhost:8080/ vue-cli-service test:e2e",
     "lint": "eslint --ext .js,.vue,.ts --ignore-path .gitignore --fix src",
@@ -18,15 +19,15 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/vue-fontawesome": "^3.0.0-4",
-    "@vue/compiler-sfc": "^3.2.31",
     "aws-amplify": "^3.4.3",
     "axios": "^0.21.1",
     "google-palette": "^1.1.0",
-    "node-sass": "^4.12.0",
+    "im-library": "file:../../IMLibrary",
     "path": "^0.12.7",
     "primeflex": "^3.1.2",
     "primeicons": "^5.0.0",
     "primevue": "^3.11.1",
+    "sass": "^1.49.9",
     "tslib": "^2.3.1",
     "vue": "^3.2.25",
     "vue-json-pretty": "^2.0.4",
@@ -36,7 +37,6 @@
   },
   "devDependencies": {
     "@originjs/vite-plugin-commonjs": "^1.0.3",
-    "@types/jest": "^24.0.19",
     "@types/node": "^17.0.18",
     "@typescript-eslint/eslint-plugin": "^4.27.0",
     "@typescript-eslint/parser": "^4.27.0",
@@ -45,16 +45,17 @@
     "@vue/eslint-config-typescript": "^7.0.0",
     "@vue/test-utils": "^2.0.0-rc.6",
     "axios-mock-adapter": "^1.19.0",
-    "babel-jest": "^26.6.3",
+    "c8": "^7.11.0",
     "cross-env": "^7.0.3",
     "cypress": "^7.5.0",
     "eslint": "^8.9.0",
     "eslint-plugin-cypress": "^2.11.3",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-vue": "^8.4.1",
+    "jsdom": "^19.0.0",
     "prettier": "^1.19.1",
-    "typescript": "^4.1.6",
+    "typescript": "^4.4.4",
     "vite": "^2.5.4",
-    "vue-jest": "^5.0.0-alpha.10"
+    "vitest": "^0.5.9"
   }
 }
