--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "vite --port 8082",
+    "dev": "npm link im-library && vite --port 8082",
     "serve": "vite preview --port 8082",
     "build": "vite build",
     "test:unit": "vitest",
@@ -38,23 +38,23 @@
   "devDependencies": {
     "@originjs/vite-plugin-commonjs": "^1.0.3",
     "@types/node": "^17.0.18",
-    "@typescript-eslint/eslint-plugin": "^4.27.0",
-    "@typescript-eslint/parser": "^4.27.0",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
     "@vitejs/plugin-vue": "^1.6.1",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^7.0.0",
-    "@vue/test-utils": "^2.0.0-rc.6",
+    "@vue/test-utils": "^2.0.0-rc.17",
     "axios-mock-adapter": "^1.19.0",
     "c8": "^7.11.0",
     "cross-env": "^7.0.3",
     "cypress": "^7.5.0",
-    "eslint": "^8.9.0",
-    "eslint-plugin-cypress": "^2.11.3",
-    "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-vue": "^8.4.1",
+    "eslint": "^6.7.2",
+    "eslint-plugin-cypress": "^2.12.1",
+    "eslint-plugin-prettier": "^3.4.1",
+    "eslint-plugin-vue": "^7.20.0",
     "jsdom": "^19.0.0",
     "prettier": "^1.19.1",
-    "typescript": "^4.4.4",
+    "typescript": "^4.5.5",
     "vite": "^2.5.4",
     "vitest": "^0.5.9"
   }
