--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "aws-amplify": "^3.4.3",
     "axios": "^0.21.1",
     "google-palette": "^1.1.0",
-    "im-library": "https://github.com/endeavourhealth-discovery/IMLibrary/blob/main/im-library-1.0.0.tgz?raw=true",
+    "im-library": "https://endeavour-codebuild-output.s3.eu-west-2.amazonaws.com/im-library-1.0.0.tgz",
     "path": "^0.12.7",
     "primeflex": "^3.1.2",
     "primeicons": "^5.0.0",
