--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "vue": "^3.2.25",
     "vue-json-pretty": "^2.0.4",
     "vue-router": "^4.0.9",
+    "vue-sweetalert2": "^5.0.2",
     "vue3-clipboard": "^1.0.0",
     "vuex": "^4.0.1"
   },
