--- a/appspec.yml
+++ b/appspec.yml
@@ -2,7 +2,7 @@ version: 0.0
 os: linux
 files:
   - source: /dist
-    destination: //opt/tomcat/webapps/editor
+    destination: /usr/share/nginx/editor
 hooks:
   BeforeInstall:
     - location: aws_scripts/cleanup
