--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@fortawesome/free-regular-svg-icons": "6.1.1",
     "@fortawesome/free-solid-svg-icons": "6.1.1",
     "@sass-collective/strip-unit": "3.1.2",
+    "abortcontroller-polyfill": "1.7.3",
     "aws-amplify": "4.3.26",
     "axios": "0.27.2",
     "google-palette": "1.1.0",
