wip created query component as composition api component

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "0.27.2",
     "google-palette": "1.1.0",
     "im-library": "https://endeavour-codebuild-output.s3.eu-west-2.amazonaws.com/im-library-1.0.0.tgz",
+    "lodash": "4.17.21",
     "path": "0.12.7",
     "primeflex": "3.2.1",
     "primeicons": "5.0.0",
