--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@cypress/vite-dev-server": "3.0.0",
     "@cypress/vue": "4.0.0",
     "@originjs/vite-plugin-commonjs": "1.0.3",
+    "@types/lodash": "^4.14.182",
     "@types/node": "18.0.0",
     "@typescript-eslint/eslint-plugin": "5.28.0",
     "@typescript-eslint/parser": "5.28.0",
