--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "allowSyntheticDefaultImports": true,
     "sourceMap": true,
     "baseUrl": ".",
-    "types": ["vite/client", "jest", "google-palette"],
+    "types": ["vite/client", "jest", "google-palette", "vue-sweetalert2"],
     "paths": {
       "@/*": ["src/*"]
     },
