--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "vue-router": "4.0.16",
     "vue-sweetalert2": "5.0.5",
     "vue3-clipboard": "1.0.0",
+    "vuedraggable": "^4.1.0",
     "vuex": "4.0.2"
   },
   "devDependencies": {
