--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "scripts": {
     "dev": "npm link im-library && vite --port 8082",
+    "dev:mocked": "npm link im-library && vite --mode mock --port 8082",
     "preview": "vite preview --port 8082",
     "build": "vite build",
-    "test:unit": "vitest",
+    "test:unit": "vitest --mode test",
     "test:coverage": "vitest run --coverage",
     "cypress:run": "cypress run",
     "test:e2e": "cypress open --browser chrome",
@@ -59,10 +60,14 @@
     "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-vue": "9.1.1",
     "jsdom": "20.0.0",
+    "msw": "^0.47.0",
     "prettier": "2.7.1",
     "start-server-and-test": "1.14.0",
     "typescript": "4.7.4",
     "vite": "2.9.12",
     "vitest": "0.15.1"
+  },
+  "msw": {
+    "workerDirectory": "dist"
   }
 }
