--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "vue-router": "4.0.16",
     "vue-sweetalert2": "5.0.5",
     "vue3-clipboard": "1.0.0",
-    "vuedraggable": "^4.1.0",
+    "vuedraggable": "4.1.0",
     "vuex": "4.0.2"
   },
   "devDependencies": {
@@ -55,14 +55,15 @@
     "@vue/eslint-config-typescript": "11.0.0",
     "@vue/test-utils": "2.0.0",
     "c8": "7.11.3",
-    "cross-env": "^7.0.3",
+    "cross-env": "7.0.3",
     "cypress": "10.1.0",
     "eslint": "8.18.0",
     "eslint-plugin-cypress": "2.12.1",
     "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-vue": "9.1.1",
+    "headers-polyfill": "3.0.10",
     "jsdom": "20.0.0",
-    "msw": "^0.47.0",
+    "msw": "0.47.0",
     "prettier": "2.7.1",
     "start-server-and-test": "1.14.0",
     "typescript": "4.7.4",
