--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "format": "prettier --write"
   },
   "dependencies": {
+    "@faker-js/faker": "7.6.0",
     "@fortawesome/fontawesome-svg-core": "6.1.1",
     "@fortawesome/free-brands-svg-icons": "6.1.1",
     "@fortawesome/free-regular-svg-icons": "6.1.1",
     "@fortawesome/free-solid-svg-icons": "6.1.1",
+    "@mswjs/data": "0.10.2",
     "@sass-collective/strip-unit": "3.1.2",
     "abortcontroller-polyfill": "1.7.3",
     "aws-amplify": "4.3.26",
@@ -46,7 +48,7 @@
     "@cypress/vite-dev-server": "3.0.0",
     "@cypress/vue": "4.0.0",
     "@originjs/vite-plugin-commonjs": "1.0.3",
-    "@types/lodash": "^4.14.182",
+    "@types/lodash": "4.14.182",
     "@types/node": "18.0.0",
     "@typescript-eslint/eslint-plugin": "5.28.0",
     "@typescript-eslint/parser": "5.28.0",
